
 o license: LGPL updated to version 2.1
 o Path: improved efficiency of shortest_path
 o Makefile: patch to the build system for a DESTDIR (patch of Igor Galic)
 o Dot: fixed bug in the parsing of attributes

version 0.99d, April 24th, 2008
-------------------------------
 o fixed bug in Makefile when ocamlfind is installed
 o fixed bug in Topological.Make.{iter,fold}
 o fixed bug in Oper.intersect
 o improved efficiency of Path.Dijkstra

version 0.99c, April 3rd, 2008
------------------------------
 o replicated a bug fix of Bitv (could not affect Matrix, though)
 o fixed DFS traversal in Traverse.Dfs.{prefix,prefix_component,iterator}

version 0.99b, December 18th, 2007
----------------------------------
 o fixed link bug with ocaml 3.09 
   (see http://caml.inria.fr/mantis/view.php?id=4124)

version 0.99a, November 21st, 2007
---------------------------------
 o fixed bug in Makefile when lablgtk2 is not installed
 o Sig.I.create and Sig_pack.create are now of type ?size:int -> unit -> t 
   (instead of unit -> t) to indicate an initial guess on the graph size

version 0.99, June 27th, 2007
-----------------------------
 o experimental: GTK-based graph editor based on hyperbolic geometry;
   to build it and test it, cd to editor/ and type make
 o [Components.Make] functor: function [scc] as a new profile and a
   more precise specification. New function [scc_array].
 o fixed configure to set ocaml's standard library using "ocamlc -where"
 o new module Dot to parse files in Graphviz's DOT format
 o slight change in the license (no more clause 6 of the LGPL; see LICENSE)
 o new module Strat implementing simple game strategies
 o Graphviz: little refactoring and improved documentation

version 0.98, Sep 27th, 2006
----------------------------
 o rename Sig.IA to Sig.IM
 o add subgraph support in Graphviz 
   (breaks ascendent compatibility if you use Graphviz: by default add
      let get_subgraph _ = None
   in the argument of Graphviz.Dot and Graphviz.Neato)
