@@ -1,4 +1,5 @@
 
+ o Topological: folding is now tail-recursive (patch of Michael Furr)
  o license: LGPL updated to version 2.1
  o Path: improved efficiency of shortest_path
  o Makefile: patch to the build system for a DESTDIR (patch of Igor Galic)
